syntax = "proto3";
option java_multiple_files = true;
option java_package ="com.careergraph.auth.models";

message AuthenticationRequest {
  string username = 1;
  string password = 2;
}

message AuthenticationResponse{
    string token = 1;
}

message AuthorizationRequest {
  string token = 1;
}

message AuthorizationResponse{
  string username = 1;
  repeated string roles = 2;
}

service AuthenticationService{

  rpc authenticate (AuthenticationRequest ) returns (AuthenticationResponse);
  rpc authorization ( AuthorizationRequest) returns (AuthorizationResponse);
}